18-06-2015
Version 0.3.1
Period to markovchain